@@ -1,4 +1,4 @@
-/* $Id: inferno.c,v 1.71 2004-04-15 07:34:28 btb Exp $ */
+/* $Id: inferno.c,v 1.72 2004-05-19 21:20:07 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -1006,6 +1006,12 @@ void print_commandline_help()
 	printf( "  -xname          %s\n","FIXME: Undocumented");
 	printf( "  -xver           %s\n","FIXME: Undocumented");
 	printf( "  -tmap <t>       %s\n","select texmapper to use (c,fp,i386,pent,ppro)");
+#ifdef __MSDOS__
+	printf( "  -<X>x<Y>        %s\n", "Change screen resolution. Options:");
+	printf( "                     320x100;320x200;320x240;320x400;640x400;640x480;800x600;1024x768\n");
+#else
+	printf( "  -<X>x<Y>        %s\n", "Change screen resolution to <X> by <Y>");
+#endif
 	printf( "  -automap<X>x<Y> %s\n","Set automap resolution to <X> by <Y>");
 	printf( "  -automap_gameres %s\n","Set automap to use the same resolution as in game");
 //	printf( "  -menu<X>x<Y>    %s\n","Set menu resolution to <X> by <Y>");
@@ -1143,9 +1149,6 @@ int main(int argc, char *argv[])
 {
 	int i, t;
 	ubyte title_pal[768];
-	int screen_width = 640;
-	int screen_height = 480;
-	u_int32_t screen_mode = SM(screen_width,screen_height);
 
 	con_init();  // Initialise the console
 	mem_init();
@@ -1297,60 +1300,49 @@ int main(int argc, char *argv[])
 #endif
 
 	{
-//added on 12/14/98 by Matt Mueller - override res in d1x.ini with command line args
-		int i, argnum=INT_MAX;
-//end addition -MM
+		int screen_width = 640;
+		int screen_height = 480;
 		int vr_mode = VR_NONE;
-		int screen_compatible = 1;
-		int use_double_buffer = 0;
+		int screen_flags = VRF_COMPATIBLE_MENUS;
+		u_int32_t Game_screen_mode = 0; // HACK -- from d1x game.c
 
-//added/edited on 12/14/98 by Matt Mueller - override res in d1x.ini with command line args
-//added on 9/30/98 by Matt Mueller clean up screen mode code, and add higher resolutions
-#define SCREENMODE(X,Y,C) if ( (i=FindArg( "-" #X "x" #Y ))&&(i<argnum))  {argnum=i; screen_mode = SM( X , Y ); con_printf(CON_VERBOSE, "Using " #X "x" #Y " ...\n" );screen_width = X;screen_height = Y;use_double_buffer = 1;screen_compatible = C;}
-//aren't #defines great? :)
+		if (FindResArg("", &screen_width, &screen_height))
+		{
+			if ((screen_width == 320 && screen_height == 200) ||
+				(screen_width == 640 && screen_height == 480))
+				screen_flags |= VRF_COMPATIBLE_MENUS;
+			else
+				screen_flags &= ~VRF_COMPATIBLE_MENUS;
 
-		SCREENMODE(320,100,0);
-		SCREENMODE(320,200,1);
-//end addition/edit -MM
-		SCREENMODE(320,240,0);
-		SCREENMODE(320,400,0);
-		SCREENMODE(640,400,0);
-		SCREENMODE(640,480,0);
-		SCREENMODE(800,600,0);
-		SCREENMODE(1024,768,0);
-		SCREENMODE(1152,864,0);
-		SCREENMODE(1280,960,0);
-		SCREENMODE(1280,1024,0);
-		SCREENMODE(1600,1200,0);
-//end addition -MM
-		
-//added ifdefs on 9/30/98 by Matt Mueller to fix high res in linux
-#ifdef __MSDOS__
-		if ( FindArg( "-nodoublebuffer" ) )	{
-			con_printf(CON_VERBOSE, "Double-buffering disabled...\n" );
-#endif
-			use_double_buffer = 0;
-#ifdef __MSDOS__
+			con_printf(CON_VERBOSE, "Using %ix%i ...\n", screen_width, screen_height);
 		}
-#endif
-//end addition -MM
 
-		//added 3/24/99 by Owen Evans for screen res changing
-//		Game_Screen_mode = screen_mode;
-		//end added -OE
-		game_init_render_buffers(screen_mode, screen_width, screen_height, vr_mode, screen_compatible);
-               
+// added ifdef on 9/30/98 by Matt Mueller to fix high res in linux
+#ifdef __MSDOS__
+		if (FindArg("-nodoublebuffer"))
+#endif
+// end addition -MM
+		{
+			con_printf(CON_VERBOSE, "Double-buffering disabled...\n");
+			screen_flags &= ~VRF_USE_PAGING;
+		}
+
+		// added 3/24/99 by Owen Evans for screen res changing
+		Game_screen_mode = SM(screen_width, screen_height);
+		// end added -OE
+		game_init_render_buffers(Game_screen_mode, screen_width, screen_height, vr_mode, screen_flags);
+
 	}
 	{
-//added/edited on 12/14/98 by Matt Mueller - override res in d1x.ini with command line args
-		int i, argnum=INT_MAX;
-//added on 9/30/98 by Matt Mueller for selectable automap modes - edited 11/21/99 whee, more fun with defines.
-#define SMODE(V,VV,VG,X,Y) if ( (i=FindArg( "-" #V #X "x" #Y )) && (i<argnum))  {argnum=i; VV = SM( X , Y );VG=0;}
+// added/edited on 12/14/98 by Matt Mueller - override res in d1x.ini with command line args
+		int i, argnum = INT_MAX, w, h;
+// added on 9/30/98 by Matt Mueller for selectable automap modes - edited 11/21/99 whee, more fun with defines. - edited 03/31/02 to use new FindResArg.
+#define SMODE(V,VV,VG) if ((i=FindResArg(#V, &w, &h)) && (i < argnum)) { argnum = i; VV = SM(w, h); VG = 0; }
 #define SMODE_GR(V,VG) if ((i=FindArg("-" #V "_gameres"))){if (i<argnum) VG=1;}
 #define SMODE_PRINT(V,VV,VG) if (VG) con_printf(CON_VERBOSE, #V " using game resolution ...\n"); else con_printf(CON_VERBOSE, #V " using %ix%i ...\n",SM_W(VV),SM_H(VV) );
-//aren't #defines great? :)
-//end addition/edit -MM
-#define S_MODE(V,VV,VG) argnum=INT_MAX;SMODE(V,VV,VG,320,200);SMODE(V,VV,VG,320,240);SMODE(V,VV,VG,320,400);SMODE(V,VV,VG,640,400);SMODE(V,VV,VG,640,480);SMODE(V,VV,VG,800,600);SMODE(V,VV,VG,1024,768);SMODE(V,VV,VG,1280,1024);SMODE(V,VV,VG,1600,1200);SMODE_GR(V,VG);SMODE_PRINT(V,VV,VG);
+// aren't #defines great? :)
+// end addition/edit -MM
+#define S_MODE(V,VV,VG) argnum = INT_MAX; SMODE(V, VV, VG); SMODE_GR(V, VG); SMODE_PRINT(V, VV, VG);
 
 		S_MODE(automap,automap_mode,automap_use_game_res);
 //		S_MODE(menu,menu_screen_mode,menu_use_game_res);
